--- a/Js/practice.html
+++ b/Js/practice.html
@@ -87,12 +87,18 @@
 	*/
 	var user = {
 		email: "taguchi@gmail.com",//プロパティ
-		score: "80"
+		score: "80",
+		greet: function(name){//メソッド
+			console.log("hello, " + name + " from " + this.email);
+		}
 	};
 	console.log(user["email"]);
 	console.log(user.email);
 	user.score = 100;
 	console.log(user);
+	user.greet("Tom");
+
+
 
 	
 
