CSS入門完了、CSS3入門開始

--- a/css/index.html
+++ b/css/index.html
@@ -6,13 +6,69 @@
   <link rel="stylesheet"
   href="defalt.css">
  </head>
-
-
  <body>
+ <!--ブロックボックス-->
   <h1>hello<h1>
+
   <p>world</p>
+
+
+<!--インラインボックス-->
   <span>wow!</span>
+
   <a href="">link</a>
+
+<!--display:table-->
+<!-- <div class = "container">
+
+<div class="box gray">
+Hello Hello Hello Hello Hello　Hello
+</div>
+
+<div class="box silver">
+Hello Hello Hello Hello Hello　HelloHello Hello Hello Hello Hello　Hello
+</div>
+
+<div class="box orange">
+Hello Hello Hello Hello Hello　Hello
+Hello Hello Hello Hello Hello　Hello
+</div>
+
+</div> -->
+
+<!--
+<div class = "container">
+ <div class = "row">
+  <div class="box gray">
+ Hello Hello Hello Hello Hello　Hello
+ </div>
+
+ <div class="box silver">
+ Hello Hello Hello Hello Hello　HelloHello Hello Hello Hello Hello　Hello
+ </div>
+ </div>
+
+ <div class = "row">
+  <div class="box orange">
+  Hello Hello Hello Hello Hello　Hello
+  </div>
+
+  <div class="box gray">
+  Hello Hello Hello Hello Hello　HelloHello Hello Hello Hello Hello　Hello
+  </div>
+ </div>
+ 
+</div>
+
+<!- positionで位置を調整-->
+
+<body>
+<h1>おいしいご飯<h1>
+<p><img src="food.jpg">
+おいしくておいしくて震える。おいしくておいしくて震える。おいしくておいしくて震える。おいしくておいしくて震える。</p>
+<h2>TKG</h2>
+<p>かける。まぜる。かける。まぜる。かける。まぜる。かける。まぜる。かける。まぜる。かける。まぜる。</p>
+
  </body>
 
 </html>
