CSS3を完了、CSSレイアウトを更新

--- a/CSS3/index.html
+++ b/CSS3/index.html
@@ -11,6 +11,13 @@
 
  <h1>shadow</h1>
 
+ <div class="container">
+ 	<div class="box">Box</div>
+ 	<div class="box">Box</div>
+ 	<div class="box">Box</div>
+
+ </div>
+
  <div id="box1"></div>
  <div id="box2"></div>
 
