CSSレイアウトを進行した

--- a/css_layout/index.html
+++ b/css_layout/index.html
@@ -13,9 +13,15 @@
  	header
  	</div>
  </header>
+ <div id="eyecatch">
+ 	<div class="container">
+ 	eyecatch
+ 	</div>
+ </div>
  <main>
-  	<div class="container">
- 	main
+  	<div class="container clear">
+ 	<div id="left">Left</div>
+ 	<div id="right">Right</div>
  	</div>
  </main>
  <footer>
@@ -24,7 +30,6 @@
  	</div>
  </footer>
 
-　<h1>hello</h1>
-  <p>world</p>
+　
 </body>
 <html>
