--- a/wordpress/mysite/index.html
+++ b/wordpress/mysite/index.html
@@ -36,6 +36,11 @@
 						</div>
 					</div>	
 				</div><!-- /post -->
+				<div class="navigation">
+				<div class="prev">prev</div>
+				<div class="next">next</div>
+			</div>
+
 			</div><!-- /posts-->
 			<div id="sidebar">
 				<div class="widget">
