CSSレイアウトを進めた

--- a/css_layout/index.html
+++ b/css_layout/index.html
@@ -17,9 +17,14 @@
  	<div class="container">
  	eyecatch
  	</div>
+ 	<ul id = "menu">
+ 		<li><a href="">Menu 1</a></li>
+ 		<li><a href="">Menu 2</a></li>
+ 		<li><a href="">Menu 3</a></li>
+ 	</ul>
  </div>
  <main>
-  	<div class="container clear">
+  	<div class="clear">
  	<div id="left">Left</div>
  	<div id="right">Right</div>
  	</div>
